--- a/index.html
+++ b/index.html
@@ -1,11 +1,24 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Poker 21</title>
-    <script src="script.js" type="text/javascript"></script>
-</head>
-<body>
+<html>
 
+<head>
+	<title>Poker 21</title>
+	<meta charset="UTF-8" />
+</head>
+
+<body>
+    <!-- Target Balise -->
+	    <div id="app"></div>
+    <!-- Target Balise -->
+
+    <!-- Insert all Components file here -->
+        <script src="src/Components/Cards.js">
+        </script>
+    <!-- End -->
+
+    <!-- Executing all components in App -->
+	<script src="src/index.js">
+	</script>
 </body>
+
 </html>
