--- a/index.html
+++ b/index.html
@@ -7,18 +7,18 @@
 </head>
 
 <body>
-    <!-- Target Balise -->
 	    <div id="app"></div>
-    <!-- Target Balise -->
+        <button class="deck">Deck</button>
+        <!-- Target Balise -->
+            <div class="cards"></div>
+        <!-- Target Balise -->
 
     <!-- Insert all Components file here -->
-        <script src="src/Components/Cards.js">
+        <script src="src/Components/Cards/Cards.js">
+        </script>
+        <script src="src/Components/Deck/Deck.js">
         </script>
     <!-- End -->
-
-    <!-- Executing all components in App -->
-	<script src="src/index.js">
-	</script>
 </body>
 
 </html>
