--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
             <button id="showIdDeck" style="display: none">Show next card</button>
             <button id="stopTheGame"style="display:none">Stop the game</button>
             <div id="state">Aucune partie en cours</div>
-            <div id="value">value = 0</div>
+            <div id="value">Value = 0</div>
+            <div id="finalCard"></div>
             <div class="displayCards">
                 <div id="setup"></div>
             </div>
