--- a/src/index.html
+++ b/src/index.html
@@ -38,14 +38,19 @@
                 </div>
             </div>
             <div id="endgame" style="display:none">
-                <div id="canvas" style="display:none"></div>
+                <div id="backgroundCanvas"></div>
+                <div id="canvas"></div>
             </div>
         </div>
 
 
-    <script src="./Script/Cards.js"></script>
+    <!-- <script src="./Script/Cards.js"></script> -->
 	<script src="./Script/index.js"></script>
     <script src="./Script/drawCard.js"></script>
+    <script src='./Script/stopTheGame.js'></script>
+    <script src="./Script/initDeck.js"></script>
+    <script src='./Script/replay.js'></script>
+    
 </body>
 
 </html>
