--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,8 @@
         <meta charset="UTF-8" />
         <meta name="description" content="Site du jeu appelé 'le jeu du 21'">
         <meta name="keywords" content="blackjack,poker,jeu,21,carte,jeu de carte,jeu du 21">
+        <meta name="viewport" content= "width=device-width, initial-scale=1.0">
+
         <link rel="icon" href="./Image/favicon.png">
         <link rel="stylesheet" href="./Asset/styles.css">
         <link rel="preconnect" href="https://fonts.googleapis.com">
