fix: minor mistake

--- a/src/index.html
+++ b/src/index.html
@@ -35,7 +35,7 @@
                         </div>
                         <div id="setup"></div>
                         <div id="histo">
-                            <div id="titleHisto">Last cards drawn</div>
+                            <div id="titleHisto">Last card drawn</div>
                         </div>
                     </div>
                 </div>
